# cadeau

./: .gitignore  CMakeLists.txt  EXPERIMENT_INSTRUCTIONS.md  README.md  biggap.mkvinfo.txt  cadeau-config.cmake.in  conanfile.py  conanfile.txt  debug_decoder.txt  muxer_example.cpp  release-plz.toml  xpp-config.cmake.in
.github/: xmf-native-build.yml
.github/workflows/: build.yml  native-build.yml  release-crates.yml  release.yml  test-package.yml  xmf-build.yml  xpp-build.yml
cmake/: ConanHelper.cmake  WaykSDK.cmake  conan.cmake
dotnet/: Devolutions.Cadeau.sln
dotnet/Devolutions.Cadeau/: Devolutions.Cadeau.csproj  Devolutions.Cadeau.targets  DucStreamer.cs  XmfBipBuffer.cs  XmfImage.cs  XmfMkvStream.cs  XmfMuxer.cs  XmfRecorder.cs  XmfWsStream.cs
dotnet/Devolutions.Cadeau.Test/: Devolutions.Cadeau.Test.csproj  Program.cs
dotnet/Devolutions.Cadeau/DucStreamer/: BaseDucStreamerBackend.cs  DucStreamType.cs  DucStreamer.cs  DucStreamerBackendV1.cs  DucStreamerBackendV2.cs  DucStreamerBackendV3.cs  DucStreamerConnector.cs  DucStreamerExtensions.cs  DucStreamerInfo.cs  UnmanagedMemoryManager.cs
dotnet/Devolutions.Cadeau/Push/: DucPushClient.cs  DucPushException.cs  DucPushLog.cs  DucStorageFullException.cs
dotnet/Devolutions.Xmf/: Devolutions.Xmf.csproj  Devolutions.Xmf.targets
examples/libvpx-example/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
examples/libvpx-example/src/: main.cpp
include/xpp/: codec.h  color.h  compare.h  copy.h  math.h  platform.h  prim.h  primitive.h  scale.h  simd.h  xpp.h
libwebm/: CMakeLists.txt
libwebm/mkvmuxer/: mkvmuxer.cc  mkvmuxer.h  mkvmuxerutil.cc  mkvwriter.cc  mkvwriter.h
libxmf/: CMakeLists.txt  XmfBipBuffer.c  XmfBipBuffer.h  XmfBmp.c  XmfBmp.h  XmfCom.c  XmfCom.h  XmfFile.c  XmfFile.h  XmfImage.c  XmfImage.h  XmfMkvWriter.c  XmfMkvWriter.cpp  XmfMkvWriter.h  XmfMuxer.cpp  XmfMuxer.h  XmfNamedPipe.c  XmfNamedPipe.h  XmfPng.c  XmfPng.h  XmfRecorder.c  XmfRecorder.h  XmfString.c  XmfString.h  XmfTime.c  XmfTime.h  XmfVpxDecoder.c  XmfVpxDecoder.h  XmfVpxEncoder.c  XmfVpxEncoder.h  XmfVpxFrame.c  XmfVpxFrame.h  XmfVpxImage.c  XmfVpxImage.h  XmfVpxPacket.c  XmfVpxPacket.h  XmfWebM.cpp  XmfWebM.h
libxpp/: CMakeLists.txt  XppA710.c  XppAlpha.c  XppColor.c  XppCompare.c  XppCopy.c  XppDiff.c  XppGeneric.h  XppMath.c  XppPrim.c  XppPrimitive.c  XppScale.c  XppSimd.c  XppYCbCr.c  XppYCoCgR.c
libxpp/halide/: .gitignore  CMakeLists.txt  XppColor_halide.c  XppCompare_halide.c  XppCopy_halide.c  XppHalide.c  XppHalide.h  XppYCoCgR_halide.c  generator.cpp
libxpp/halide/generator/: CMakeLists.txt  generator.cpp
libxpp/simd/: XppCodec_neon.c  XppCodec_sse2.c  XppCompare_neon.c  XppCompare_sse2.c  XppCopy_neon.c  XppCopy_sse2.c  XppSimd.c  XppSimd.h  XppSimd_arm.c  XppSimd_x86.c  XppYCoCgR_neon.c  XppYCoCgR_sse2.c  simd.c  simd.h  simd_arm.c  simd_x86.c
media/: README.md  clock.webm.xz  libreoffice_typing.rgb.xz  timed-dvls.webm  wikipedia_scrolling.rgb.xz  window_dragging.rgb.xz  window_minimize_restore.rgb.xz
rust/: Cargo.toml  clippy.toml
rust/cadeau/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/cadeau-sys/: Cargo.toml  README.md
rust/cadeau-sys/src/: lib.rs  macros.rs  xmf.rs
rust/cadeau/examples/: decoder.rs  remuxer.rs  transcode.rs
rust/cadeau/examples/cut/: block_group.rs  debug.rs  main.rs  webm_cutter.rs
rust/cadeau/src/: lib.rs
rust/cadeau/src/xmf/: bip_buffer.rs  image.rs  mod.rs  muxer.rs  recorder.rs  time.rs
rust/cadeau/src/xmf/vpx/: decoder.rs  encoder.rs  mod.rs
rust/xmf-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/xmf-sys/src/: lib.rs  macros.rs  vpx.rs
xmf/: CMakeLists.txt  build.ps1  conanfile.py
xmf/dotnet/Devolutions.Xmf/: .gitignore  Devolutions.Xmf.csproj  Devolutions.Xmf.nuspec  XmfRecorder.cs
xmf/dotnet/Devolutions.XmfCli/: Devolutions.XmfCli.csproj  Program.cs
xmf/include/xmf/: xmf.h
xmf/libxmf/: CMakeLists.txt  XmfCom.c  XmfCom.h  XmfFile.c  XmfFile.h  XmfMath.h  XmfRecorder.c  XmfRecorder.h  XmfTime.c  XmfWebM.cpp  XmfWebM.h  xmf.rc
