[package]
name = "cadeau"
version = "0.1.0"
readme = "README.md"
description = "Idiomatic rust bindings to Cadeau library, performance primitives and media foundation functions"
categories = ["api-bindings"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[features]
default = ["xmf"]
xmf = ["cadeau-sys/xmf"]
dlopen = ["cadeau-sys/dlopen"] # Use manual library loading at runtime by providing a path to the dynamic library file.

[lints]
workspace = true

[dependencies]
cadeau-sys.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
