[package]
name = "cadeau"
version = "0.4.0"
readme = "README.md"
description = "Idiomatic rust bindings to Cadeau library, performance primitives and media foundation functions"
categories = ["api-bindings"]
include = ["src/**/*", "examples/**/*", "README.md"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
build = "build.rs"

[features]
default = ["xmf"]
xmf = ["dep:xmf-sys"]
static = ["xmf-sys/static"] # Use static linking at build-time.
dlopen = ["xmf-sys/dlopen"] # Use manual library loading at runtime.

[lints]
workspace = true

[dependencies]
xmf-sys = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
webm-iterable = "0.6.3" # For example and testing vpx decoding/encoding.
ebml-iterable = "0.6.2" # For example and testing mkv parsing.

[build]
rustflags = ["-C", "link-arg=-lstdc++"]