[package]
name = "xmf-sys"
version = "0.1.0"
readme = "README.md"
description = "Bindings to XMF native library: eXtreme Media Foundation"
categories = ["external-ffi-bindings"]
include = ["src/**/*", "README.md", "build.rs"]
links = "xmf"
build = "build.rs"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[features]
static = [] # Use static linking at build-time.
dlopen = [] # Use manual library loading at runtime.

[lints]
workspace = true

[dependencies]
dlib = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
