[package]
name = "xmf-sys"
version = "0.2.0"
readme = "README.md"
description = "Bindings to XMF native library: eXtreme Media Foundation"
categories = ["external-ffi-bindings"]
include = ["src/**/*", "README.md", "build.rs"]
links = "xmf"
build = "build.rs"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[features]
static = [] # Use static linking at build-time.
dlopen = [] # Use manual library loading at runtime.
verbose = [] # Print build script output.

[lints]
workspace = true

[dependencies]
dlib = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
build-print = "0.1.1"